feature(PowerTrading Price & Volume)